Chapter13_Managing pods’ computational resources/13.12-pod-drop-chown-capability.yaml
# Dropping a capability from a container

# You’ve seen how to add capabilities, but you can also drop capabilities that may otherwise
# be available to the container. For example, the default capabilities given to a
# container include the CAP_CHOWN capability, which allows processes to change the
# ownership of files in the filesystem.

# To prevent the container from doing that, you need to drop the capability by listing it
# under the container’s securityContext.capabilities.drop property

apiVersion: v1
kind: Pod
metadata:
  name: pod-drop-chown-capability
spec:
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]
    securityContext:
      capabilities:
        # You’re not allowing this container to change file ownership.
        drop:
        - CHOWN

# By dropping the CHOWN capability, you’re not allowed to change the owner of the /tmp 
# directory in this pod for example.
