Chapter13_Managing pods’ computational resources/13.18b-pod-add-sysadmin-capability.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-add-sysadmin-capability
spec:
  containers:
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]
    securityContext:
      # If a user tries to create a pod where they explicitly add one of the capabilities listed
      # in the policy’s requiredDropCapabilities field, the pod is rejected
      capabilities:
        add:
        - SYS_ADMIN
