Chapter13_Managing pods’ computational resources/13.25-network-policy-egress.yaml
# Using egress rules in a NetworkPolicy

#The NetworkPolicy in the following example allows pods that have the app=webserver
#label to only access pods that have the app=database label and nothing else (neither
#other pods, nor any other IP, regardless of whether it’s internal or external to the
#cluster).

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-net-policy
spec:
  # This policy applies to pods with the app=webserver label.
  podSelector:
    matchLabels:
      app: webserver
  # It limits the pods’ outbound traffic.
  egress:
  # Webserver pods may only connect to pods with the app=database label.
  - to:
    - podSelector:
        matchLabels:
          app: database
    ports:
    - port: 5432
